# Bachelor-Thesis

./: Dockerfile  compile_models.py  config.py  custom_callbacks.py  custom_layers.py  extract_nodes.sh  extract_traces.sh  launch_container.sh  loss.py  main.py  models.py  predictions.py  requirements  source_ros.sh  test_annos.txt  trt-inference.py  utils.py
groundtruths_LABELLED/: filtered_1.txt
groundtruths_LABELLED_FULL/: filtered_101.txt  filtered_103.txt  filtered_105.txt  filtered_110.txt  filtered_126.txt  filtered_145.txt  filtered_165.txt  filtered_170.txt  filtered_172.txt  filtered_174.txt  filtered_175.txt  filtered_180.txt  filtered_181.txt  filtered_196.txt  filtered_203.txt  filtered_207.txt  filtered_21.txt  filtered_231.txt  filtered_235.txt  filtered_237.txt  filtered_244.txt  filtered_247.txt  filtered_249.txt  filtered_25.txt  filtered_252.txt  filtered_258.txt  filtered_263.txt  filtered_269.txt  filtered_277.txt  filtered_279.txt  filtered_281.txt  filtered_293.txt  filtered_294.txt  filtered_297.txt  filtered_306.txt  filtered_309.txt  filtered_316.txt  filtered_32.txt  filtered_330.txt  filtered_337.txt  (+80 more)
install/: local_setup.sh  setup.sh
launch/: launch_nodes.py
log/: latest_build  latest_list
pred_json_nms/: 2_dr.json  filtered_1_ground_truth.json
pred_result_nms/: filtered_1.txt
pred_result_nms_ori/: filtered_1.txt
src/main/: package.xml  setup.py
src/main/main_subscriber/: instance1.py
src/main/pub/: publisher.py
src/main/reviewer/: reviewer.py
src/main/tiebreaker/: instance3.py
src/main/trail_subscriber/: instance2.py
(+67 files in other folders)
