<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>main</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="i.serranoher@gmail.com">iserran1</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>custom_interface</depend>

  <depend>cv2</depend>
  <depend>ps</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sys</depend>
  <depend>numpy</depend>
  <depend>glob</depend>
  <depend>tensorflow</depend>
  <depend>matplotlib</depend>
  <depend>argparse</depend>
  <depend>utils</depend>
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
